# agent-manifold

./: .gitignore  AGENT.md  Cargo.toml  README.md
src/: belief.rs  embedding.rs  geodesic.rs  lib.rs  policy.rs  projection.rs  transition.rs
