[package]
name = "agent-manifold"
version = "0.1.0"
edition = "2024"
description = "Agent parameter spaces as differentiable manifolds: policy, belief, and transition geometry for AI agents"
license = "MIT"
repository = "https://github.com/SuperInstance/agent-manifold"
keywords = ["manifold", "agent", "policy", "riemannian", "geometry"]
categories = ["mathematics", "science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
